--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,3 +1,20 @@
-html{
+html, body{
     height: 100%;
+}
+
+.home-main-block{
+    /* width: 100%;
+    height: 50%; */
+    background-image: url('../img/home-img.jpg');
+    background-size: cover;
+    background-position: center;
+    
+}
+.be-max{
+    height: 100%;
+}
+
+
+.main-buttons{
+
 }
